--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body {
     margin-bottom: 8px;
 }
 
-.item .last-week {
+.item .last-time {
     font-family: Rubik-Regular;
     font-size: 15px;
     color: #BBC0FF;
